--- a/humine-marketplace/package.json
+++ b/humine-marketplace/package.json
@@ -32,6 +32,7 @@
     "apollo-boost": "^0.4.9",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "graphql": "^14.5.8",
     "isomorphic-fetch": "^2.1.1",
     "js-cookie": "^2.2.1",
@@ -57,7 +58,8 @@
     "nodemon": "^2.0.4",
     "prettier": "2.0.2",
     "react-addons-test-utils": "15.6.2",
-    "react-test-renderer": "16.13.1"
+    "react-test-renderer": "16.13.1",
+    "nodemon": "^1.19.3"
   },
   "husky": {
     "hooks": {
