--- a/humine-marketplace/package.json
+++ b/humine-marketplace/package.json
@@ -25,7 +25,7 @@
     "@shopify/app-bridge-react": "^1.26.2",
     "@shopify/app-cli-node-generator-helper": "^1.1.2",
     "@shopify/koa-shopify-auth": "^3.1.68",
-    "@shopify/koa-shopify-graphql-proxy": "^3.2.5",
+    "@shopify/koa-shopify-graphql-proxy": "^3.3.1",
     "@shopify/koa-shopify-webhooks": "^2.5.0",
     "@shopify/polaris": "^4.27.0",
     "@zeit/next-css": "^1.0.1",
@@ -33,7 +33,7 @@
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "graphql": "^14.5.8",
+    "graphql": "^14.7.0",
     "isomorphic-fetch": "^2.1.1",
     "js-cookie": "^2.2.1",
     "koa": "^2.13.0",
@@ -55,11 +55,10 @@
     "husky": "^4.2.5",
     "jest": "26.4.2",
     "lint-staged": "^10.0.1",
-    "nodemon": "^2.0.4",
+    "nodemon": "^1.19.4",
     "prettier": "2.0.2",
     "react-addons-test-utils": "15.6.2",
-    "react-test-renderer": "16.13.1",
-    "nodemon": "^1.19.3"
+    "react-test-renderer": "16.13.1"
   },
   "husky": {
     "hooks": {
